update content - 11/9 3e1323cbb807 (add RGBX, BGRX)

--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -105,7 +105,13 @@ An enumeration of pixel formats.
 |SDL_PIXELFORMAT_RGB888
 |
 |-
+|SDL_PIXELFORMAT_RGBX8888
+|
+|-
 |SDL_PIXELFORMAT_BGR888
+|
+|-
+|SDL_PIXELFORMAT_BGRX8888
 |
 |-
 |SDL_PIXELFORMAT_ARGB8888
