--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -882,28 +882,34 @@ Compatibility functions are present in the API for backward compatibility only a
 ```
 
 ''Action 2'': 
- ||<( 30%>''If'' __only one SDL 1.3 function__ replaces the compatibility function||''Action'': See ''Markup A'' below.||
- ||<( |3 30%>''If'' __more than one SDL 1.3 function__ has replaced the compatibility function||''Action'': See ''Markup A'' below and create a list of functions, placing the most direct counterpart (or pair) first and alphabetizing any additional functions below that using the same markup for each additional function.||
- ||''Note'': Listing more than two replacement functions should occur only rarely if at all.  Please avoid making this list any larger than necessary.  This is NOT a related functions list!||
+ ||<( |2 30%>''If'' __only one SDL 1.3 function__ replaces the compatibility function||''Action'': See ''Markup A'' below.||
+ ||''Example'': [[]](), [[]]()||
+ ||<( |3 30%>''If'' __more than one SDL 1.3 function__ has replaced the compatibility function||''Action'': See ''Markup B'' below.||
+ ||''Note'': Listing more than two replacement functions should occur only rarely, if at all.  Please avoid making this list any larger than necessary.  This is NOT a related functions list!||
  ||''Example'': [[SDL_AudioDriverName]](), [[SDL_WM_ToggleFullScreen]]()||
- ||<( 30%>''If'' there are __no equivalent functions__ in SDL 1.3||''Action'': See ''Markup B'' below.||
+ ||<( |2 30%>''If'' there are __no equivalent functions__ in SDL 1.3||''Action'': See ''Markup C'' below.||
+ ||''Example'': [[]](), [[]]()||
 <br/>
-: ''Markup A'': Add the following section to the end of the page above the footer, and replace <code>SDL_Function</code> with the name of the function in SDL 1.3 that has replaced the compatibility function on that page:
+: ''Markup A'': Add the following section to the end of the page above the footer.  Replace <code>SDL_Function</code> with the name of the appropriate SDL 1.3 function:
   ```
 == SDL 1.3 Replacement(s) ==
-'''<<Color2(black,Darkorange,This function has been replaced by the following in SDL 1.3:)>>'''
- .[[SDL_Function]]
+||<tablewidth="100%" #000000 style="color: #FF8C00;">'''This function has been replaced by the following in SDL 1.3:  [[SDL_Function]]'''||
 ```
 <br/>
-: ''Markup B'': Add the following section to the end of the page above the footer, and replace <code>Other options here</code> with text describing other options in SDL 1.3 that could be used to accomplish the same goal (see other [[CategoryCompat]] pages for examples):
+: ''Markup B'': Add the following section to the end of the page above the footer.  Create a list of functions by repeating the <code>[[SDL_Function]]</code> markup, separating each member of the list with a comma, and placing the most direct counterpart first, alphabetizing any additional functions after that.
   ```
 == SDL 1.3 Replacement(s) ==
-'''<<Color2(black,Darkorange,There are currently no equivalent functions in SDL 1.3.)>>'''
-
+||<tablewidth="100%" #000000 style="color: #FF8C00;">'''This function has been replaced by the following in SDL 1.3:  [[SDL_Function]], [[SDL_Function]]'''||
+```
+<br/>
+: ''Markup C'': Add the following section to the end of the page above the footer.  Replace <code>Other options here</code> with text describing other options in SDL 1.3 that could be used to accomplish the same goal, or remove it if there is no applicable text:
+  ```
+== SDL 1.3 Replacement(s) ==
+||<tablewidth="100%" #000000 style="color: #FF8C00;">'''There are currently no equivalent functions in SDL 1.3.'''||
 Other options here
 ```
-: ''Example'': [[SDL_EnableKeyRepeat]]()
-
+: ''Example'': [[SDL_EnableKeyRepeat]]() (see other [[CategoryCompat]] pages for more examples)
+<!-- #Specific examples need to be added here -->
 
 
 
