--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -14,14 +14,14 @@
 This category contains functions for handling display and window actions.
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryVideo)>>
+<<FullSearch(category:CategoryEnum CategoryVideo -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryVideo)>>
+<<FullSearch(category:CategoryStruct CategoryVideo -SGStructures)>>
 
 == Functions ==
 
-<<FullSearch(category:CategoryVideo -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategoryVideo -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
