add search exclusions for SG page

--- a/CategoryInit.mediawiki
+++ b/CategoryInit.mediawiki
@@ -27,9 +27,15 @@ SDL_Init(SDL_INIT_VIDEO|SDL_INIT_AUDIO);
 [[SDL_Quit]]() should be called before an SDL application exits to shut down all subsystems, including the default ones.
 * It is not necessary to specify individual subsystems when using [[SDL_Quit]]().  It will automatically shut down all active subsystems. 
 
-== Functions ==
+<!-- #Remove this line and the ## in front of the following if they become relevant to this category to activate them. -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryInit -SGEnumerations)>> -->
 
-<<FullSearchCached(category:CategoryInit -CategoryEnum -CategoryStruct)>>
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryInit -SGStructures)>> -->
+
+== Functions ==
+<<FullSearch(category:CategoryInit -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
