--- a/CategoryHints.mediawiki
+++ b/CategoryHints.mediawiki
@@ -17,16 +17,17 @@ In general these hints are just that - they may or may not be supported or appli
 
 
 == Hints ==
-
 <<FullSearch(category:CategoryDefine CategoryHints)>>
 
 == Enumerations ==
+<<FullSearch(category:CategoryEnum CategoryHints -SGEnumerations)>>
 
-<<FullSearch(category:CategoryEnum CategoryHints)>>
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct Category Hints -SGStructures)>> -->
 
 == Functions ==
-
-<<FullSearch(category:CategoryHints -CategoryEnum -CategoryStruct -CategoryDefine)>>
+<<FullSearch(category:CategoryHints -CategoryEnum -CategoryStruct -CategoryDefine -SGFunctions)>>
 
 
 ----
