add search exclusions for SG page

--- a/CategoryError.mediawiki
+++ b/CategoryError.mediawiki
@@ -15,8 +15,14 @@ Functions in this category provide simple error message routines for SDL. These 
 
 The SDL error messages are in English.
 
-== Functions ==
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryError -SGEnumerations)>> -->
 
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryError -SGStructures)>> -->
+
+== Functions ==
 <<FullSearchCached(category:CategoryError -CategoryEnum -CategoryStruct)>>
 
 ----
