--- a/CategoryVersion.mediawiki
+++ b/CategoryVersion.mediawiki
@@ -23,12 +23,15 @@ These functions are used to collect or display information about the version of 
 
 SDL_revision.h must be included in your program explicitly if you want to use the SDL_REVISION constant.
 
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryVersion -SGEnumerations)>> -->
+
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryVersion)>>
+<<FullSearch(category:CategoryStruct CategoryVersion -SGStructures)>>
 
 == Functions ==
-
-<<FullSearch(category:CategoryVersion -CategoryStruct -CategoryEnum)>>
+<<FullSearch(category:CategoryVersion -CategoryStruct -CategoryEnum -SGFunctions)>>
 
 ----
 CategoryCategory
