--- a/CategorySurface.mediawiki
+++ b/CategorySurface.mediawiki
@@ -12,12 +12,15 @@
 
 This category contains functions for handling surface creation and blitting as well as simple drawing tasks including points, lines, and rectangles.
 
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategorySurface -SGEnumerations)>> -->
+
 == Structures ==
-<<FullSearch(category:CategoryStruct CategorySurface)>>
+<<FullSearch(category:CategoryStruct CategorySurface -SGStructures)>>
 
 == Functions ==
-
-<<FullSearch(category:CategorySurface -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategorySurface -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
