--- a/CategorySWM.mediawiki
+++ b/CategorySWM.mediawiki
@@ -14,15 +14,13 @@ This category contains functions for handling advanced, platform-specific window
 Your application has access to a special type of event, SDL_SYSWMEVENT, which uses the [[SDL_SysWMmsg]] structure and contains window-manager specific information.  This arrives whenever an unhandled window event occurs.  This event is ignored by default, but you can enable it with [[SDL_EventState]]().
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategorySWM)>>
-
+<<FullSearch(category:CategoryEnum CategorySWM -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategorySWM)>>
+<<FullSearch(category:CategoryStruct CategorySWM -SGStructures)>>
 
 == Functions ==
-
-<<FullSearch(category:CategorySWM -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategorySWM -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
