--- a/CategoryMouse.mediawiki
+++ b/CategoryMouse.mediawiki
@@ -24,9 +24,15 @@ The other API is in [http://hg.libsdl.org/SDL/file/100f7ab48946/include/SDL_inpu
 Those two APIs are incompatible, and you usually should not use both at the same time. But for legacy purposes, this API refers to a "mouse" when it actually means the system pointer and not a physical mouse.
 
 
-== Functions ==
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryMouse -SGEnumerations)>> -->
 
-<<FullSearch(category:CategoryMouse -CategoryEnum -CategoryStruct)>>
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryMouse -SGStructures)>> -->
+
+== Functions ==
+<<FullSearch(category:CategoryMouse -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
