--- a/CategoryJoystick.mediawiki
+++ b/CategoryJoystick.mediawiki
@@ -13,9 +13,15 @@
 
 This category contains functions for handling inputs from joysticks.
 
-== Functions ==
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Enumerations == -->
+<!-- #<<FullSearch(category:CategoryEnum CategoryJoystick -SGEnumerations)>> -->
 
-<<FullSearch(category:CategoryJoystick -CategoryEnum -CategoryStruct)>>
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryJoystick -SGStructures)>> -->
+
+== Functions ==
+<<FullSearch(category:CategoryJoystick -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
