--- a/CategoryAudio.mediawiki
+++ b/CategoryAudio.mediawiki
@@ -14,14 +14,13 @@
 This category contains functions for handling audio devices and audio input/output.
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryAudio)>>
+<<FullSearch(category:CategoryEnum CategoryAudio -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryAudio)>>
+<<FullSearch(category:CategoryStruct CategoryAudio -SGStructures)>>
 
 == Functions ==
-
-<<FullSearch(category:CategoryAudio -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategoryAudio -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
