--- a/CategoryThread.mediawiki
+++ b/CategoryThread.mediawiki
@@ -32,10 +32,14 @@ Always use the _beginthread() and _endthread() of the calling runtime library!
 ''NOTE'': You should not expect to be able to create a window, render, or receive events on any thread other than the main one.  For platform-specific exceptions or complicated options ask on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org mailing list] or [http://forums.libsdl.org/viewtopic.php?t=5973 forum].
  
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryThread)>>
+<<FullSearch(category:CategoryEnum CategoryThread -SGEnumerations)>>
+
+<!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
+<!-- #== Structures == -->
+<!-- #<<FullSearch(category:CategoryStruct CategoryThread -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryThread -CategoryEnum -CategoryStruct)>>
+<<FullSearch(category:CategoryThread -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
