--- a/SDL_GetWindowFromID.mediawiki
+++ b/SDL_GetWindowFromID.mediawiki
@@ -17,7 +17,7 @@ SDL_Window* SDL_GetWindowFromID(Uint32 id)
 |}
 
 == Return Value ==
-Returns the window associated with '''id''' or NULL if it doesn't exist.
+Returns the window associated with '''id''' or NULL if it doesn't exist; call [[SDL_GetError]]() for more information. 
 
 == Code Examples ==
 ```c++
