--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -37,7 +37,7 @@ SDL_Window* SDL_CreateWindow(const char* title,
 |}
 
 == Return Value ==
-Returns ,,the ID of ,,the window created or NULL if window creation failed; call [[SDL_GetError]]() for more information.
+Returns the window that was created or NULL on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
